--- a/styles/board.css
+++ b/styles/board.css
@@ -549,6 +549,7 @@
 }
 
 .delete_task {
+  
   display: flex;  
   align-items: center;
   gap: 8px;
@@ -864,571 +865,12 @@
   gap: 16px;
   margin-top: 8px;
 }
-
-@media (max-width: 620px) {
-  .largeCardA {
-    width: 411px;
-  }
+.edit_task:hover .edit-task-title{
+    color: #2aaae2; 
 }
 
-@media (max-width: 513px) {
-  .largeCardA {
-    width: 350px;
-  }
-}
 
-@media (max-width: 444px) {
-  .largeCardA {
-    width: 300px;
-  }
-}
 
-@media (max-width: 375px) {
-  .titleBoard {
-    font-size: 47px !important;
-  }
-
-  .desingLagrCard {
-    position: absolute;
-    top: 17px;
-    bottom: 100px;
-    width: 90%;
-  }
-
-  .largeCardA {
-    max-height: 94%;
-    border: solid;
-    display: flex;
-    padding: 14px 12px;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 24px;
-    border-radius: 30px;
-    background: #fff;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
-    width: 89%;
-  }
-
-  .TechnicalTask {
-    display: flex;
-    padding: 4px 16px !important;
-    align-items: flex-start;
-    gap: 10px;
-    font-size: 16px !important;
-    font-style: normal;
-  }
-
-  .largCardTitle {
-    color: var(--black, #000);
-    font-family: Inter;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
-    /* 43.2px */
-  }
-
-  .largCardTextArea {
-    color: var(--black, #000);
-
-    /* Version 2/body */
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    /* 19.2px */
-  }
-
-  .headlineBoard {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 10px;
-    width: 302px;
-  }
-
-  .plusImgMobile:hover .plus_add_task_mobile {
-    display: none;
-  }
-
-  .plus_add_task_mobileHover {
-    display: none;
-  }
-
-  .plusImgMobile:hover .plus_add_task_mobileHover {
-    display: block;
-  }
-
-  .tasksToDo {
-    margin-top: 0;
-  }
-
-  .searchbarIn {
-    margin-left: 0px;
-    flex-direction: column;
-    width: 396px;
-    margin-top: 40px;
-    display: flex;
-    align-items: flex-start;
-    height: 73px;
-    gap: 40px;
-  }
-
-  .primaryBoard {
-    display: none;
-  }
-
-  .plus_add_task_mobile {
-    display: block;
-  }
-
-  .searchBox {
-    margin-left: 8px;
-    width: 270px;
-    height: 30px;
-  }
-
-  .src {
-    font-size: 20px;
-  }
-
-  .taskAria {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin-left: 0px;
-  }
-
-  .tasksToDo {
-    overflow: scroll !important;
-    max-height: 650px !important;
-    flex-direction: column;
-    width: 428px;
-    margin-left: 0;
-  }
-
-  .taskBoardTtle {
-    width: 300px;
-    margin-left: 10px;
-    margin-right: 71px;
-    font-size: 27px;
-  }
-
-  .headLineCss {
-    max-width: 252px;
-  }
-
-  .progressTitles {
-    font-size: 27px !important;
-  }
-}
-
-@media (min-width: 376px) and (max-width: 648px) {
-  .titleBoard {
-    width: 100% !important;
-    font-size: 47px !important;
-  }
-
-  .headlineBoard {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 10px;
-    width: 100%;
-  }
-
-  .plusImgMobile:hover .plus_add_task_mobile {
-    display: none;
-  }
-
-  .plus_add_task_mobileHover {
-    display: none;
-  }
-
-  .plusImgMobile:hover .plus_add_task_mobileHover {
-    display: block;
-  }
-
-  .searchbarIn {
-    margin-left: 0px;
-    flex-direction: column;
-    width: 648px;
-    margin-top: 40px;
-    display: flex;
-    align-items: flex-start;
-    height: 73px;
-    gap: 40px;
-  }
-
-  .primaryBoard {
-    display: none;
-  }
-
-  .plus_add_task_mobile {
-    display: block;
-  }
-
-  .searchBoxLeft {
-    width: 100%;
-    margin-right: 0 !important;
-  }
-
-  .searchBox {
-    margin-left: 8px;
-    width: 600px;
-    height: 30px;
-  }
-
-  .searchinput {
-    width: 100%;
-  }
-
-  .src {
-    font-size: 20px;
-  }
-
-  .taskAria {
-    /* display: flex; */
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 0;
-    margin-left: 0px;
-    width: 630px;
-    height: 900px;
-  }
-
-  .tasksToDo {
-    margin-top: 0;
-    overflow: scroll !important;
-    max-height: 650px !important;
-    flex-direction: column;
-    width: 648px;
-    margin-left: 0;
-  }
-
-  .taskBoardTtle {
-    flex: 25%;
-    width: 257px;
-    margin-left: 10px;
-    margin-right: 0px;
-    font-size: 27px;
-  }
-
-  .headLineCss {
-    max-width: 244px;
-  }
-
-  .progressTitles {
-    font-size: 27px !important;
-  }
-}
-
-@media (min-width: 649px) and (max-width: 900px) {
-  .titleBoard {
-    width: 600px;
-    font-size: 47px !important;
-  }
-
-  .headlineBoard {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 10px;
-    width: 96%;
-  }
-
-  .plusImgMobile:hover .plus_add_task_mobile {
-    display: none;
-  }
-
-  .plus_add_task_mobileHover {
-    display: none;
-  }
-
-  .plusImgMobile:hover .plus_add_task_mobileHover {
-    display: block;
-  }
-
-  .searchbarIn {
-    margin-left: 0px;
-    flex-direction: column;
-    width: 870px;
-    margin-top: 40px;
-    display: flex;
-    align-items: flex-start;
-    height: 73px;
-    gap: 40px;
-  }
-
-  .primaryBoard {
-    display: none;
-  }
-
-  .plus_add_task_mobile {
-    display: block;
-  }
-
-  .searchBoxLeft {
-    margin-right: 0;
-    width: 98%;
-  }
-
-  .searchBox {
-    display: flex;
-    width: 312px;
-    height: 48px;
-    padding: 8px 16px;
-    align-items: center;
-    width: 100%;
-  }
-
-  .searchinput {
-    width: 100%;
-  }
-
-  .src {
-    font-size: 20px;
-  }
-
-  .taskAria {
-    /* display: flex; */
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 0;
-    margin-left: 0px;
-    width: 583px !important;
-    height: 900px;
-  }
-
-  .tasksToDo {
-    margin-top: 0;
-    overflow: scroll !important;
-    max-height: 650px !important;
-    flex-direction: column;
-    width: 890px;
-    margin-left: 0;
-  }
-
-  .taskBoardTtle {
-    flex: 25%;
-    width: 257px;
-    min-height: 150px;
-    margin-left: 8px;
-    margin-right: 10px;
-    font-size: 27px;
-  }
-
-  .headLineCss {
-    max-width: 396px;
-  }
-
-  .progressTitles {
-    font-size: 27px !important;
-  }
-}
-
-@media (max-width: 450px) {
-  .searchBar {
-    width: 90% !important;
-  }
-
-  .searchBoxLeft {
-    width: 400px;
-    margin-right: 0 !important;
-  }
-  .headlineBoard {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 10px;
-    width: 405px;
-  }
-}
-@media (max-width: 500px) {
-  .searchBar {
-    width: 90% !important;
-  }
-
-  .searchBoxLeft {
-    width: 100% !important;
-    margin-right: 0 !important;
-  }
-  .headlineBoard {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 10px;
-    width: 100% !important;
-  }
-}
-@media (max-width: 646px) {
-  .searchBar {
-    width: 98%;
-  }
-}
-
-@media (max-width: 646px) {
-  .searchBar {
-    width: 98%;
-  }
-}
-
-@media (max-width: 1000px) {
-  .searchBar {
-    width: 1215px;
-    height: 232px;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
-    padding: 1px 88px 1px 0px;
-    margin-left: 20px !important;
-  }
-
-  .searchbarIn {
-    width: 100% !important;
-  }
-
-  .taskAria {
-    display: flow-root !important;
-    flex-wrap: wrap;
-    padding: 0;
-    margin-left: 20px !important;
-    width: 930px;
-    flex-direction: column;
-  }
-
-  .tasksCardsDiv {
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
-    height: 40vh;
-    overflow-x: scroll;
-    display: flex;
-    align-items: center;
-  }
-  .taskBoardTtle {
-    width: 252px;
-    gap: 16px;
-    display: flex;
-    flex-direction: column;
-    width: 96%;
-  }
-}
-
-@media (max-width: 1200px) {
-  .taskAria {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin-left: 250px;
-    width: 87%;
-  }
-
-  .tasksToDo {
-    width: 100% !important;
-    margin-left: 0 !important;
-  }
-
-  .searchBar {
-    width: 93%;
-    height: 232px;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
-    padding: 1px 1px 0px;
-    margin-left: 232px;
-  }
-
-  .searchbarIn {
-    display: flex;
-    width: 819px;
-    height: 73px;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 64px;
-    margin-right: 82px;
-    margin-top: 79.5px;
-    margin-bottom: 48px;
-  }
-}
-
-@media (max-width: 1373px) {
-  .searchbarIn {
-    display: flex;
-    width: 1000px;
-    height: 73px;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 64px;
-    margin-right: 82px;
-    margin-top: 79.5px;
-    margin-bottom: 48px;
-  }
-}
-
-@media (max-width: 1637px) {
-  .searchbarIn {
-    display: flex;
-    height: 73px;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: 0 !important;
-    margin-right: 82px;
-    margin-top: 79.5px;
-    margin-bottom: 48px;
-  }
-}
-
-/* @media (min-width: 901px) and (max-width: 1200px) {
-  .headlineBoard {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 250px;
-  }
-
-  .plusImgMobile {
-    display: none;
-  }
-
-  .plus_add_task_mobileHover {
-    display: none;
-  }
-
-  .searchbarIn {
-    margin-left: 0px;
-    margin-top: 40px;
-    display: flex;
-    height: 73px;
-  }
-
-  .plus_add_task_mobile {
-    display: block;
-  }
-
-  .searchBoxLeft {
-    width: 870px;
-    margin-left: 180px;
-  }
-
-
-  .tasksToDo {
-    margin-top: 0;
-    overflow: scroll !important;
-    max-height: 850px !important;
-    flex-direction: column;
-    width: 1200px;
-    margin-left: 0;
-  }
-
-  .taskBoardTtle {
-    flex: 25%;
-    width: 257px;
-    min-height: 150px;
-    margin-left: 8px;
-    margin-right: 10px;
-    font-size: 27px;
-  }
-
-  .headLineCss {
-    max-width: 396px;
-  }
-} */
 .subtasksContents {
   display: flex;
   align-items: center;
@@ -1473,4 +915,12 @@
   background-size: contain;
   background-repeat: no-repeat;
 
+}
+
+.inputLeft_addTaskEdit{
+  display: flex;
+    width: 440px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
 }
