--- a/styles/boardResponisv.css
+++ b/styles/boardResponisv.css
@@ -507,3 +507,274 @@
       margin-bottom: 48px;
     }
   }
+
+  
+  @media (max-width: 622px) {
+#addTaskLargeCard{
+    width: 434px !important;
+}
+.inputLeft_addTaskBoard {
+    width: 420px;
+}
+.edittitle{
+    display: flex;
+    flex-direction: column;
+    height: 64px;
+    border: 1px;
+    gap: 4px;
+    width: 394px;
+}
+.titleEditCard {
+    position: relative;
+    height: 120px;
+    flex: 1;
+    display: flex;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    width: 394px;
+    border-radius: 10px;
+}
+.categoryEditCard {
+    z-index: 6;
+    cursor: pointer;
+    display: flex;
+    padding: 12px 16px;
+    justify-content: space-between;
+    position: relative;
+    border-radius: 10px;
+    border: 1px solid var(--Style, #d1d1d1);
+    background: var(--white, #fff);
+    color: var(--black, #000);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    outline: none;
+    width: 360px;
+    margin-top: 8px;
+}
+.underListContactBoardEdit{
+    cursor: pointer;
+    position: absolute;
+    top: 55px;
+    padding-inline-start: 0px;
+    flex-direction: column;
+    border-radius: 10px;
+    background: var(--white, #fff);
+    z-index: 1;
+    max-height: 340px;
+    width: 375px;
+    overflow: auto;
+}
+ .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 254px;
+}
+  }
+
+  @media (max-width: 510px){
+    #addTaskLargeCard{
+        width: 350px !important;
+    }
+  .inputLeft_addTaskBoard {
+    width: 350px;
+}
+.edittitle{
+    display: flex;
+    flex-direction: column;
+    height: 64px;
+    border: 1px;
+    gap: 4px;
+    width: 328px;
+}
+.titleEditCard {
+    position: relative;
+    height: 120px;
+    flex: 1;
+    display: flex;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    width: 328px;
+    border-radius: 10px;
+}
+.categoryEditCard {
+    z-index: 6;
+    cursor: pointer;
+    display: flex;
+    padding: 12px 16px;
+    justify-content: space-between;
+    position: relative;
+    border-radius: 10px;
+    border: 1px solid var(--Style, #d1d1d1);
+    background: var(--white, #fff);
+    color: var(--black, #000);
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    outline: none;
+    width: 294px;
+    margin-top: 8px;
+}
+.underListContactBoardEdit{
+    cursor: pointer;
+    position: absolute;
+    top: 55px;
+    padding-inline-start: 0px;
+    flex-direction: column;
+    border-radius: 10px;
+    background: var(--white, #fff);
+    z-index: 1;
+    max-height: 340px;
+    width: 375px;
+    overflow: auto;
+}
+ .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 254px;
+}
+.inputRight_addTaskEdit {
+    display: flex;
+    width: 328px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 24px;
+    margin-top: 80px;
+}
+.boardpriority {
+    display: flex;
+    gap: 12px;
+    margin-top: 8px;
+    flex-direction: column;
+    align-items: center;
+}
+.allSubtasks {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 120%;
+    width: 96%;
+}
+.subtaskItem {
+   cursor: pointer;
+    display: flex;
+    width: 410px;
+    height: 32px;
+    padding: 4px 16px;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    width: 100% !important;
+}
+}
+
+@media (max-width: 444px) {
+    #addTaskLargeCard{
+        width:300px !important;
+    }
+    .inputLeft_addTaskBoard {
+        width: 300px;
+    }
+    .edittitle{
+        display: flex;
+        flex-direction: column;
+        height: 64px;
+        border: 1px;
+        gap: 4px;
+        width: 278px;
+    }
+    .titleEditCard {
+        position: relative;
+        height: 120px;
+        flex: 1;
+        display: flex;
+        box-sizing: border-box;
+        font-family: "Inter", sans-serif;
+        width: 278px;
+        border-radius: 10px;
+    }
+    .categoryEditCard {
+        z-index: 6;
+        cursor: pointer;
+        display: flex;
+        padding: 12px 16px;
+        justify-content: space-between;
+        position: relative;
+        border-radius: 10px;
+        border: 1px solid var(--Style, #d1d1d1);
+        background: var(--white, #fff);
+        color: var(--black, #000);
+        font-family: "Inter", sans-serif;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24px;
+        outline: none;
+        width: 239px;
+        margin-top: 8px;
+    }
+    .underListContactBoardEdit{
+        cursor: pointer;
+        position: absolute;
+        top: 55px;
+        padding-inline-start: 0px;
+        flex-direction: column;
+        border-radius: 10px;
+        background: var(--white, #fff);
+        z-index: 1;
+        max-height: 340px;
+        width: 314px;
+        overflow: auto;
+    }
+     .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+        content: "";
+        width: 24px;
+        height: 24px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: absolute;
+        left: 170px;
+    }
+    .contactList {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+        border-radius: 10px;
+        height: 49px;
+        padding: 7px 16px;
+        width: 77%;
+    }
+    .text_enterTitle {
+        cursor: pointer;
+        width: 398px;
+        font-family: "Inter", sans-serif;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 24px;
+        border-style: none;
+        outline: none;
+        overflow: hidden;
+    }
+    .inputRight_addTaskEdit {
+        display: flex;
+        width: 265px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 24px;
+        margin-top: 80px;
+    }
+      }
