--- a/styles/board.css
+++ b/styles/board.css
@@ -549,15 +549,13 @@
 }
 
 .delete_task {
-  
-  display: flex;  
+  display: flex;
   align-items: center;
   gap: 8px;
-
-} 
+}
 
 .delete-task-title:hover {
-  color: #29ABE2; 
+  color: #29abe2;
   cursor: pointer;
 }
 
@@ -577,7 +575,6 @@
   outline: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cmask id='mask0_71348_10272' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Crect x='0.5' width='24' height='24' fill='%23D9D9D9'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_71348_10272)'%3E%3Cpath d='M7.5 21C6.95 21 6.47917 20.8042 6.0875 20.4125C5.69583 20.0208 5.5 19.55 5.5 19V6C5.21667 6 4.97917 5.90417 4.7875 5.7125C4.59583 5.52083 4.5 5.28333 4.5 5C4.5 4.71667 4.59583 4.47917 4.7875 4.2875C4.97917 4.09583 5.21667 4 5.5 4H9.5C9.5 3.71667 9.59583 3.47917 9.7875 3.2875C9.97917 3.09583 10.2167 3 10.5 3H14.5C14.7833 3 15.0208 3.09583 15.2125 3.2875C15.4042 3.47917 15.5 3.71667 15.5 4H19.5C19.7833 4 20.0208 4.09583 20.2125 4.2875C20.4042 4.47917 20.5 4.71667 20.5 5C20.5 5.28333 20.4042 5.52083 20.2125 5.7125C20.0208 5.90417 19.7833 6 19.5 6V19C19.5 19.55 19.3042 20.0208 18.9125 20.4125C18.5208 20.8042 18.05 21 17.5 21H7.5ZM7.5 6V19H17.5V6H7.5ZM9.5 16C9.5 16.2833 9.59583 16.5208 9.7875 16.7125C9.97917 16.9042 10.2167 17 10.5 17C10.7833 17 11.0208 16.9042 11.2125 16.7125C11.4042 16.5208 11.5 16.2833 11.5 16V9C11.5 8.71667 11.4042 8.47917 11.2125 8.2875C11.0208 8.09583 10.7833 8 10.5 8C10.2167 8 9.97917 8.09583 9.7875 8.2875C9.59583 8.47917 9.5 8.71667 9.5 9V16ZM13.5 16C13.5 16.2833 13.5958 16.5208 13.7875 16.7125C13.9792 16.9042 14.2167 17 14.5 17C14.7833 17 15.0208 16.9042 15.2125 16.7125C15.4042 16.5208 15.5 16.2833 15.5 16V9C15.5 8.71667 15.4042 8.47917 15.2125 8.2875C15.0208 8.09583 14.7833 8 14.5 8C14.2167 8 13.9792 8.09583 13.7875 8.2875C13.5958 8.47917 13.5 8.71667 13.5 9V16Z' fill='%2329ABE2'/%3E%3C/g%3E%3C/svg%3E");
 }
-
 
 .boardText p {
   color: black;
@@ -634,15 +631,15 @@
   justify-content: center;
   align-items: center;
   background: transparent;
-  border: none;           
-  cursor: pointer;        
+  border: none;
+  cursor: pointer;
   border-radius: 100%;
   height: 30px;
   width: 30px;
 }
 
 .close-button-edite:hover {
- background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 /* addTaskEdit */
@@ -804,6 +801,24 @@
   line-height: 120%;
 }
 
+.textMedium {
+  color: black !important;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.textLow {
+  color: black !important;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
 .custom-checkbox-board {
   font-size: 20px;
   font-family: "Inter", sans-serif;
@@ -863,11 +878,9 @@
   gap: 16px;
   margin-top: 8px;
 }
-.edit_task:hover .edit-task-title{
-    color: #2aaae2; 
+.edit_task:hover .edit-task-title {
+  color: #2aaae2;
 }
-
-
 
 .subtasksContents {
   display: flex;
@@ -876,10 +889,8 @@
   width: 92%;
   border-radius: 20px;
   cursor: pointer;
-
 }
 .subtasksContents:hover {
-
   background: #eeee;
 }
 .subtasksContents input[type="checkbox"] {
@@ -896,43 +907,41 @@
 }
 
 .subtasksContents label:before {
-  content: '';
+  content: "";
   width: 24px;
   height: 24px;
   background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 25 25" fill="none"%3E%3Crect x="4.68213" y="4.39673" width="16" height="16" rx="3" stroke="%232A3647" stroke-width="2"%3E%3C/rect%3E%3C/svg%3E');
   background-size: contain;
   background-repeat: no-repeat;
-
 }
 
-.subtasksContents input[type="checkbox"]:checked+label:before {
-  content: '';
+.subtasksContents input[type="checkbox"]:checked + label:before {
+  content: "";
   width: 24px;
   height: 24px;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 18 19' fill='none'%3E%3Cpath d='M17 8.96582V14.9658C17 16.6227 15.6569 17.9658 14 17.9658H4C2.34315 17.9658 1 16.6227 1 14.9658V4.96582C1 3.30897 2.34315 1.96582 4 1.96582H12' stroke='%232A3647' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9.96582L9 13.9658L17 2.46582' stroke='%232A3647' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   background-size: contain;
   background-repeat: no-repeat;
-
 }
 .subtaskButtons {
   display: none;
 }
-.subtaskButtons button{
+.subtaskButtons button {
   border: none;
-    background: transparent;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+  background: transparent;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 .subtaskItem:hover .subtaskButtons {
   display: inline-block;
 }
-.inputLeft_addTaskEdit{
+.inputLeft_addTaskEdit {
   display: flex;
-    width: 440px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
+  width: 440px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
 }
 .allSubtasks {
   width: 100%;
