--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,7 +1,6 @@
 /* Allround Class */
 
 body {
-  background-color: #e5e5e6;
   overflow-x: hidden;
 }
 
@@ -9,7 +8,6 @@ body {
   overflow: hidden;
   max-width: 100vw;
   height: calc(100vh - 96px);
-  background: #e5e5e6;
   margin-left: 232px;
   font-family: "Inter", sans-serif;
 }
@@ -665,8 +663,9 @@ body {
   }
 
   .tasksText {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 100%;
+    margin-top: 18px;
   }
 
   .summaryTasks {
@@ -676,4 +675,11 @@ body {
   .blueLineText {
     width: 100%;
   }
+
+  .tasksTextFeedback {
+    font-size: 14px;
+    margin-top: 38px;
 }
+
+}
+
