--- a/styles/board.css
+++ b/styles/board.css
@@ -36,11 +36,11 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  height: 30vh;
+  height: auto;
 }
 
 .searchBar {
-  width: 1215px;
+  width: 100%;
   height: 232px;
   flex-shrink: 0;
   justify-content: center;
@@ -248,6 +248,7 @@
   background: var(--white, #fff);
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
   height: 280px;
+  max-width: 252px;
 }
 
 .cardA:hover {
