--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -1,5 +1,21 @@
+@media (max-height: 700px) {
+  .contentTask {
+    overflow: scroll !important;
+    height: 100vh !important;
+    margin-top: 0px !important;
+    padding-top: 64px !important;
+    padding-bottom: 64px !important;
+  }
+}
 
-@media (max-width: 397px){
+@media (max-height: 900px) {
+  .contentTask {
+    overflow: scroll !important;
+    height: 160vh !important;
+    margin-top: -80px;
+  }
+}
+@media (max-width: 599px) {
   .box-sizing {
     display: none;
   }
@@ -16,7 +32,8 @@
   .comment,
   .textSubtasks,
   .textAddSubtasks,
-  .description, .asignedTo {
+  .description,
+  .asignedTo {
     font-size: 16px;
   }
 
@@ -34,24 +51,23 @@
     width: 300px;
   }
 
-  #contentJoin {
+  .contentTask {
     display: flex;
     justify-content: center;
-  }
-
-  .contentTask {
+    align-items: center;
+    flex-direction: column;
     overflow: scroll !important;
-    height: calc(100vh - 176px);
+    height: calc(100vh - 158px);
   }
 
-  .textContainer_addTask {    
+  .textContainer_addTask {
     font-size: 47px;
-    margin-left: 8px;
-    width: 320px;   
+    margin-left: 12px;
+    width: 320px;
   }
 
-  .group66_addTask {  
-    margin-left: 10px;
+  .group66_addTask {
+    margin-left: -304px;
     flex-direction: column;
     justify-content: center;
     width: 0;
@@ -67,7 +83,7 @@
   }
 
   .title_v1 {
-    width: 10px;   
+    width: 10px;
   }
 
   .title {
@@ -99,16 +115,16 @@
 
   .categoryFrame74 {
     width: 300px;
-    padding: 10px 21px;    
-    width:255px; 
+    padding: 10px 21px;
+    width: 255px;
   }
   .categoryFrame_74 {
     width: 300px;
-    padding: 10px 21px;    
-    width:255px;
-  }  
+    padding: 10px 21px;
+    width: 255px;
+  }
 
-  .list{
+  .list {
     height: 0px;
   }
 
@@ -122,8 +138,8 @@
     height: 76px;
   }
 
-  .contactList{
-    height: 40px; 
+  .contactList {
+    height: 40px;
   }
 
   .custom-checkbox {
@@ -136,12 +152,13 @@
     width: 20px;
   }
 
-  .frame28{
+  .frame28 {
     width: 300px;
   }
 
-  .priority{
+  .priority {
     width: 100%;
+    gap: 12px;
   }
 
   .priorityUrgent,
@@ -170,8 +187,8 @@
     font-size: 16px;
   }
 
-  .underlist{
-    position: relative;    
+  .underlist {
+    position: relative;
   }
 
   .options {
@@ -190,13 +207,13 @@
     width: 265px;
   }
 
-  .addTasksFooter{  
+  .addTasksFooter {
     margin-bottom: 25px;
-    margin-left: 12px;
-    width: 300px;   
+    margin-left: 0px;
+    width: 300px;
   }
 
-  .comment{
+  .comment {
     display: flex;
     margin-top: 0px;
     text-wrap: wrap;
@@ -215,23 +232,22 @@
     gap: 4px;
   }
 
-  .task_succes{
+  .task_succes {
     margin-left: 0%;
     margin-bottom: 400px;
   }
 
-  .task_succes_container{
+  .task_succes_container {
     width: 256px;
   }
 }
 
-@media (min-width: 398px) and (max-width: 578px) {
-
+@media (min-width: 600px) and (max-width: 799px) {
   .box-sizing {
     display: none;
   }
 
-  .header{
+  .header {
     position: relative;
   }
 
@@ -266,6 +282,10 @@
   }
 
   .contentTask {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     overflow: scroll !important;
     height: calc(100vh - 176px);
   }
@@ -273,7 +293,8 @@
   .textContainer_addTask {
     font-size: 47px;
     margin-top: 50px;
-    margin-left: 25px;
+
+    margin-left: -235px;
   }
 
   .group66_addTask {
@@ -327,11 +348,14 @@
     padding: 10px 21px;
   }
 
-  .taskCategory{
+  .taskCategory {
     width: 475px;
   }
 
-  .underList, .list,  .listContact, .contactList{
+  .underList,
+  .list,
+  .listContact,
+  .contactList {
     position: relative;
   }
 
@@ -390,10 +414,10 @@
   }
 
   .category {
-    width: 100%;  
+    width: 100%;
   }
 
-  .underList{
+  .underList {
     position: relative;
   }
 
@@ -425,18 +449,17 @@
     gap: 4px;
   }
 
-  .task_succes{
+  .task_succes {
     margin-left: 0%;
   }
 }
 
-
-@media (min-width: 579px) and (max-width: 999px) {
+@media (min-width: 800px) and (max-width: 999px) {
   .box-sizing {
     display: none;
   }
 
-  .header{
+  .header {
     position: relative;
   }
 
@@ -461,7 +484,7 @@
 
   .textContainer_addTask {
     font-size: 47px;
-    margin-left: 120px;
+    margin-left: 74px;
     display: flex;
     margin-top: 60px;
     align-items: center;
@@ -469,7 +492,7 @@
   }
 
   .group66_addTask {
-    margin-left: 100px;
+    margin-left: 50px;
     max-width: 760px;
     margin-top: 15px;
     gap: 8px;
@@ -522,7 +545,7 @@
     width: 668px;
     padding: 10px 21px;
   }
-  .taskCategory{
+  .taskCategory {
     width: 668px;
   }
 
@@ -530,7 +553,10 @@
     width: 300x;
   }
 
-  .underList, .list, .listContact, .contactList{
+  .underList,
+  .list,
+  .listContact,
+  .contactList {
     position: relative;
   }
 
@@ -600,17 +626,17 @@
 
   .addTasksFooter {
     margin-top: 50px;
-    margin-left: 125px;
-    width: 710px;
+    margin-left: 74px;
+    width: 708px;
   }
 
-  .task-succes{
+  .task-succes {
     margin-right: 50px;
   }
 }
 
 @media (min-width: 1000px) and (max-width: 1149px) {
-  .box-sizingResponsiv{
+  .box-sizingResponsiv {
     display: none;
   }
 
@@ -619,7 +645,7 @@
     height: calc(100vh - 176px);
     padding-top: 52px;
   }
-  
+
   .recursor {
     display: none;
   }
@@ -629,54 +655,54 @@
     margin-left: 290px;
   }
 
-  .group66_addTask {    
+  .group66_addTask {
     display: flex;
     align-items: center;
-    justify-content: center;    
-    margin-left: 200px;  
-    flex-direction: column; 
+    justify-content: center;
+    margin-left: 200px;
+    flex-direction: column;
   }
 
-  .inputLeft_addTask{
+  .inputLeft_addTask {
     display: flex;
     height: 422px;
     width: 80%;
   }
 
-  .title_v1{
+  .title_v1 {
     width: 780px;
   }
 
-  .frame203{
+  .frame203 {
     width: 780px;
   }
 
-  .title_frame14{
-    width:738px;
+  .title_frame14 {
+    width: 600px;
   }
 
-  .description_v1{
-    width: 780px;
+  .description_v1 {
+    width: 600px;
   }
 
-  .frame207{
-    width: 780px;
+  .frame207 {
+    width: 600px;
   }
 
-  .frame17{
-    width: 780px;
+  .frame17 {
+    width: 644px;
     position: inherit;
-  }  
+  }
 
-  .asignedTo_v1{
+  .asignedTo_v1 {
     width: 780px;
   }
-    
+
   .custom-checkbox label:before {
     margin-left: 320px;
   }
 
-  .contactAvatar{
+  .contactAvatar {
     margin-top: 2px;
   }
 
@@ -690,22 +716,22 @@
   }
 
   .underListContact {
-    width: 780px;   
-  }  
+    width: 780px;
+  }
 
-  .categoryFrame74{
-    width: 748px;
+  .categoryFrame74 {
+    width: 608px;
     z-index: auto;
     position: inherit;
   }
 
-  .categoryFrame_74{
-    width: 748px;
+  .categoryFrame_74 {
+    width: 608px;
     z-index: auto;
     position: inherit;
   }
 
-  .taskCategory{
+  .taskCategory {
     width: 748px;
   }
 
@@ -713,66 +739,67 @@
     display: none;
   }
 
-  .inputRight_addTask{
+  .inputRight_addTask {
     width: 80%;
     margin-top: 25px;
   }
 
-  .dueDate, .frame211{
-    width: 780px;
+  .dueDate,
+  .frame211 {
+    width: 640px;
   }
-  .inputDate{
-    width: 780px;
-  }
-
-  .frame28{
+  .inputDate {
     width: 780px;
   }
 
-  .priority{
+  .frame28 {
+    width: 780px;
+  }
+
+  .priority {
     width: 100%;
   }
 
-  .list{
-    position:relative
+  .list {
+    position: relative;
   }
 
-  .options{
+  .options {
     width: 750px;
   }
 
-  .subtasks, .allSubtasks{
-    width:100%;
+  .subtasks,
+  .allSubtasks {
+    width: 82%;
   }
 
-  .subtaskItem{
+  .subtaskItem {
     width: 97% !important;
   }
 
   .addTasksFooter {
     margin-left: 300px;
-    width: 780px;
+    width: 640px;
   }
 
   .comment {
     display: flex;
     width: 250px;
-  } 
-  .task_succes{
+  }
+  .task_succes {
     margin-bottom: 700px;
   }
 }
 
 @media (min-width: 1150px) and (max-width: 1399px) {
-
-  .box-sizingResponsiv{
+  .box-sizingResponsiv {
     display: none;
   }
 
-  .header { 
+  .header {
     position: relative;
   }
- 
+
   .recursor {
     display: none;
   }
@@ -781,31 +808,31 @@
     margin-left: 260px;
   }
 
-  .group66_addTask {    
+  .group66_addTask {
     width: 80%;
     align-items: center;
     justify-content: center;
     justify-content: space-evenly;
-    margin-left: 235px;  
+    margin-left: 235px;
   }
 
-  .frame17{
+  .frame17 {
     position: inherit;
   }
 
-  .categoryFrame74{
+  .categoryFrame74 {
     width: 405px;
     z-index: auto;
     position: inherit;
   }
 
-  .inputLeft_addTask{
+  .inputLeft_addTask {
     display: flex;
     align-items: center;
     height: 422px;
   }
 
-  .list{
+  .list {
     position: relative;
   }
 
@@ -816,7 +843,7 @@
 
   .comment {
     display: flex;
-    width: 250px;  
+    width: 250px;
     margin-left: 40px;
   }
 
@@ -834,8 +861,8 @@
   }
 }
 
-@media (min-width: 1400px){
-  .box-sizingResponsiv{
+@media (min-width: 1400px) {
+  .box-sizingResponsiv {
     display: none;
   }
 
@@ -843,5 +870,3 @@
     margin-top: 40px;
   }
 }
-
-  
