--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -1,21 +1,23 @@
 @media (max-height: 700px) {
+
   .contentTask {
     overflow: scroll !important;
     height: 100vh !important;
-    margin-top: 0px !important;
+    margin-top: 100px !important;
     padding-top: 64px !important;
     padding-bottom: 64px !important;
   }
-}
+  }
 
 @media (max-height: 900px) {
-  .contentTask {
-    overflow: scroll !important;
-    height: 160vh !important;
-    margin-top: -80px;
-  }
+
+.contentTask {
+  overflow: scroll !important;
+  height: 160vh !important;
+  margin-top: -80px;
 }
-@media (max-width: 599px) {
+}
+@media (max-width: 599px){
   .box-sizing {
     display: none;
   }
@@ -32,8 +34,7 @@
   .comment,
   .textSubtasks,
   .textAddSubtasks,
-  .description,
-  .asignedTo {
+  .description, .asignedTo {
     font-size: 16px;
   }
 
@@ -51,22 +52,24 @@
     width: 300px;
   }
 
+ 
+
   .contentTask {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     overflow: scroll !important;
-    height: calc(100vh - 158px);
+    height: calc(100vh - 176px);
   }
 
-  .textContainer_addTask {
+  .textContainer_addTask {    
     font-size: 47px;
     margin-left: 12px;
-    width: 320px;
+    width: 320px;   
   }
 
-  .group66_addTask {
+  .group66_addTask {  
     margin-left: -304px;
     flex-direction: column;
     justify-content: center;
@@ -83,7 +86,7 @@
   }
 
   .title_v1 {
-    width: 10px;
+    width: 10px;   
   }
 
   .title {
@@ -115,16 +118,16 @@
 
   .categoryFrame74 {
     width: 300px;
-    padding: 10px 21px;
-    width: 255px;
+    padding: 10px 21px;    
+    width:255px; 
   }
   .categoryFrame_74 {
     width: 300px;
-    padding: 10px 21px;
-    width: 255px;
-  }
+    padding: 10px 21px;    
+    width:255px;
+  }  
 
-  .list {
+  .list{
     height: 0px;
   }
 
@@ -138,8 +141,8 @@
     height: 76px;
   }
 
-  .contactList {
-    height: 40px;
+  .contactList{
+    height: 40px; 
   }
 
   .custom-checkbox {
@@ -152,11 +155,11 @@
     width: 20px;
   }
 
-  .frame28 {
+  .frame28{
     width: 300px;
   }
 
-  .priority {
+  .priority{
     width: 100%;
     gap: 12px;
   }
@@ -187,8 +190,8 @@
     font-size: 16px;
   }
 
-  .underlist {
-    position: relative;
+  .underlist{
+    position: relative;    
   }
 
   .options {
@@ -207,13 +210,13 @@
     width: 265px;
   }
 
-  .addTasksFooter {
+  .addTasksFooter{  
     margin-bottom: 25px;
     margin-left: 0px;
-    width: 300px;
+    width: 300px;   
   }
 
-  .comment {
+  .comment{
     display: flex;
     margin-top: 0px;
     text-wrap: wrap;
@@ -232,22 +235,23 @@
     gap: 4px;
   }
 
-  .task_succes {
+  .task_succes{
     margin-left: 0%;
     margin-bottom: 400px;
   }
 
-  .task_succes_container {
+  .task_succes_container{
     width: 256px;
   }
 }
 
 @media (min-width: 600px) and (max-width: 799px) {
+
   .box-sizing {
     display: none;
   }
 
-  .header {
+  .header{
     position: relative;
   }
 
@@ -293,7 +297,6 @@
   .textContainer_addTask {
     font-size: 47px;
     margin-top: 50px;
-
     margin-left: -235px;
   }
 
@@ -348,14 +351,11 @@
     padding: 10px 21px;
   }
 
-  .taskCategory {
+  .taskCategory{
     width: 475px;
   }
 
-  .underList,
-  .list,
-  .listContact,
-  .contactList {
+  .underList, .list,  .listContact, .contactList{
     position: relative;
   }
 
@@ -414,10 +414,10 @@
   }
 
   .category {
-    width: 100%;
+    width: 100%;  
   }
 
-  .underList {
+  .underList{
     position: relative;
   }
 
@@ -449,17 +449,18 @@
     gap: 4px;
   }
 
-  .task_succes {
+  .task_succes{
     margin-left: 0%;
   }
 }
+
 
 @media (min-width: 800px) and (max-width: 999px) {
   .box-sizing {
     display: none;
   }
 
-  .header {
+  .header{
     position: relative;
   }
 
@@ -545,7 +546,7 @@
     width: 668px;
     padding: 10px 21px;
   }
-  .taskCategory {
+  .taskCategory{
     width: 668px;
   }
 
@@ -553,10 +554,7 @@
     width: 300x;
   }
 
-  .underList,
-  .list,
-  .listContact,
-  .contactList {
+  .underList, .list, .listContact, .contactList{
     position: relative;
   }
 
@@ -630,13 +628,13 @@
     width: 708px;
   }
 
-  .task-succes {
+  .task-succes{
     margin-right: 50px;
   }
 }
 
 @media (min-width: 1000px) and (max-width: 1149px) {
-  .box-sizingResponsiv {
+  .box-sizingResponsiv{
     display: none;
   }
 
@@ -645,7 +643,7 @@
     height: calc(100vh - 176px);
     padding-top: 52px;
   }
-
+  
   .recursor {
     display: none;
   }
@@ -655,54 +653,54 @@
     margin-left: 290px;
   }
 
-  .group66_addTask {
+  .group66_addTask {    
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-left: 200px;
-    flex-direction: column;
+    justify-content: center;    
+    margin-left: 200px;  
+    flex-direction: column; 
   }
 
-  .inputLeft_addTask {
+  .inputLeft_addTask{
     display: flex;
     height: 422px;
     width: 80%;
   }
 
-  .title_v1 {
+  .title_v1{
     width: 780px;
   }
 
-  .frame203 {
+  .frame203{
     width: 780px;
   }
 
-  .title_frame14 {
+  .title_frame14{
+    width:600px;
+  }
+
+  .description_v1{
     width: 600px;
   }
 
-  .description_v1 {
+  .frame207{
     width: 600px;
   }
 
-  .frame207 {
-    width: 600px;
-  }
-
-  .frame17 {
+  .frame17{
     width: 644px;
     position: inherit;
-  }
+  }  
 
-  .asignedTo_v1 {
+  .asignedTo_v1{
     width: 780px;
   }
-
+    
   .custom-checkbox label:before {
     margin-left: 320px;
   }
 
-  .contactAvatar {
+  .contactAvatar{
     margin-top: 2px;
   }
 
@@ -716,22 +714,22 @@
   }
 
   .underListContact {
-    width: 780px;
-  }
+    width: 780px;   
+  }  
 
-  .categoryFrame74 {
+  .categoryFrame74{
     width: 608px;
     z-index: auto;
     position: inherit;
   }
 
-  .categoryFrame_74 {
+  .categoryFrame_74{
     width: 608px;
     z-index: auto;
     position: inherit;
   }
 
-  .taskCategory {
+  .taskCategory{
     width: 748px;
   }
 
@@ -739,41 +737,39 @@
     display: none;
   }
 
-  .inputRight_addTask {
+  .inputRight_addTask{
     width: 80%;
     margin-top: 25px;
   }
 
-  .dueDate,
-  .frame211 {
+  .dueDate, .frame211{
     width: 640px;
   }
-  .inputDate {
+  .inputDate{
     width: 780px;
   }
 
-  .frame28 {
+  .frame28{
     width: 780px;
   }
 
-  .priority {
+  .priority{
     width: 100%;
   }
 
-  .list {
-    position: relative;
+  .list{
+    position:relative
   }
 
-  .options {
+  .options{
     width: 750px;
   }
 
-  .subtasks,
-  .allSubtasks {
-    width: 82%;
+  .subtasks, .allSubtasks{
+    width:82%;
   }
 
-  .subtaskItem {
+  .subtaskItem{
     width: 97% !important;
   }
 
@@ -785,21 +781,22 @@
   .comment {
     display: flex;
     width: 250px;
-  }
-  .task_succes {
+  } 
+  .task_succes{
     margin-bottom: 700px;
   }
 }
 
 @media (min-width: 1150px) and (max-width: 1399px) {
-  .box-sizingResponsiv {
+
+  .box-sizingResponsiv{
     display: none;
   }
 
-  .header {
+  .header { 
     position: relative;
   }
-
+ 
   .recursor {
     display: none;
   }
@@ -808,31 +805,31 @@
     margin-left: 260px;
   }
 
-  .group66_addTask {
+  .group66_addTask {    
     width: 80%;
     align-items: center;
     justify-content: center;
     justify-content: space-evenly;
-    margin-left: 235px;
+    margin-left: 235px;  
   }
 
-  .frame17 {
+  .frame17{
     position: inherit;
   }
 
-  .categoryFrame74 {
+  .categoryFrame74{
     width: 405px;
     z-index: auto;
     position: inherit;
   }
 
-  .inputLeft_addTask {
+  .inputLeft_addTask{
     display: flex;
     align-items: center;
     height: 422px;
   }
 
-  .list {
+  .list{
     position: relative;
   }
 
@@ -843,7 +840,7 @@
 
   .comment {
     display: flex;
-    width: 250px;
+    width: 250px;  
     margin-left: 40px;
   }
 
@@ -861,8 +858,8 @@
   }
 }
 
-@media (min-width: 1400px) {
-  .box-sizingResponsiv {
+@media (min-width: 1400px){
+  .box-sizingResponsiv{
     display: none;
   }
 
@@ -870,3 +867,5 @@
     margin-top: 40px;
   }
 }
+
+  
