--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -1,23 +1,22 @@
 @media (max-height: 900px) {
-
   .contentTask {
     overflow: scroll !important;
     height: 100vh !important;
-    margin-top: 100px !important;
-    padding-top: 64px !important;
+    margin-top: -80px !important;
+    padding-top: 100px !important;
     padding-bottom: 64px !important;
   }
-  }
+}
 
 @media (max-height: 900px) {
+  .contentTask {
+    overflow: scroll !important;
+    height: 160vh !important;
+    margin-top: -300px !important;
+  }
+}
 
-.contentTask {
-  overflow: scroll !important;
-  height: 160vh !important;
-  margin-top: -80px;
-}
-}
-@media (max-width: 599px){
+@media (max-width: 599px) {
   .box-sizing {
     display: none;
   }
@@ -34,7 +33,8 @@
   .comment,
   .textSubtasks,
   .textAddSubtasks,
-  .description, .asignedTo {
+  .description,
+  .asignedTo {
     font-size: 16px;
   }
 
@@ -52,8 +52,6 @@
     width: 300px;
   }
 
- 
-
   .contentTask {
     display: flex;
     justify-content: center;
@@ -63,13 +61,13 @@
     height: calc(100vh - 176px);
   }
 
-  .textContainer_addTask {    
+  .textContainer_addTask {
     font-size: 47px;
     margin-left: 12px;
-    width: 320px;   
+    width: 320px;
   }
 
-  .group66_addTask {  
+  .group66_addTask {
     margin-left: -304px;
     flex-direction: column;
     justify-content: center;
@@ -80,13 +78,17 @@
     display: none;
   }
 
+  .content_addTask {
+    margin-top: 456px;
+  }
+
   .inputRight_addTask {
     margin-top: 50px;
     width: 300px;
   }
 
   .title_v1 {
-    width: 10px;   
+    width: 10px;
   }
 
   .title {
@@ -118,16 +120,16 @@
 
   .categoryFrame74 {
     width: 300px;
-    padding: 10px 21px;    
-    width:255px; 
+    padding: 10px 21px;
+    width: 255px;
   }
   .categoryFrame_74 {
     width: 300px;
-    padding: 10px 21px;    
-    width:255px;
-  }  
+    padding: 10px 21px;
+    width: 255px;
+  }
 
-  .list{
+  .list {
     height: 0px;
   }
 
@@ -141,8 +143,8 @@
     height: 76px;
   }
 
-  .contactList{
-    height: 40px; 
+  .contactList {
+    height: 40px;
   }
 
   .custom-checkbox {
@@ -155,11 +157,11 @@
     width: 20px;
   }
 
-  .frame28{
+  .frame28 {
     width: 300px;
   }
 
-  .priority{
+  .priority {
     width: 100%;
     gap: 12px;
   }
@@ -190,8 +192,8 @@
     font-size: 16px;
   }
 
-  .underlist{
-    position: relative;    
+  .underlist {
+    position: relative;
   }
 
   .options {
@@ -210,13 +212,13 @@
     width: 265px;
   }
 
-  .addTasksFooter{  
+  .addTasksFooter {
     margin-bottom: 25px;
     margin-left: 0px;
-    width: 300px;   
+    width: 300px;
   }
 
-  .comment{
+  .comment {
     display: flex;
     margin-top: 0px;
     text-wrap: wrap;
@@ -235,23 +237,22 @@
     gap: 4px;
   }
 
-  .task_succes{
+  .task_succes {
     margin-left: 0%;
     margin-bottom: 400px;
   }
 
-  .task_succes_container{
+  .task_succes_container {
     width: 256px;
   }
 }
 
 @media (min-width: 600px) and (max-width: 799px) {
-
   .box-sizing {
     display: none;
   }
 
-  .header{
+  .header {
     position: relative;
   }
 
@@ -317,6 +318,10 @@
     width: 518px;
   }
 
+  .content_addTask {
+    margin-top: 356px;
+  }
+
   .title {
     font-size: 20px;
     width: 530px;
@@ -351,11 +356,14 @@
     padding: 10px 21px;
   }
 
-  .taskCategory{
+  .taskCategory {
     width: 475px;
   }
 
-  .underList, .list,  .listContact, .contactList{
+  .underList,
+  .list,
+  .listContact,
+  .contactList {
     position: relative;
   }
 
@@ -414,10 +422,10 @@
   }
 
   .category {
-    width: 100%;  
+    width: 100%;
   }
 
-  .underList{
+  .underList {
     position: relative;
   }
 
@@ -449,18 +457,17 @@
     gap: 4px;
   }
 
-  .task_succes{
+  .task_succes {
     margin-left: 0%;
   }
 }
-
 
 @media (min-width: 800px) and (max-width: 999px) {
   .box-sizing {
     display: none;
   }
 
-  .header{
+  .header {
     position: relative;
   }
 
@@ -546,7 +553,7 @@
     width: 668px;
     padding: 10px 21px;
   }
-  .taskCategory{
+  .taskCategory {
     width: 668px;
   }
 
@@ -554,7 +561,10 @@
     width: 300x;
   }
 
-  .underList, .list, .listContact, .contactList{
+  .underList,
+  .list,
+  .listContact,
+  .contactList {
     position: relative;
   }
 
@@ -628,13 +638,13 @@
     width: 708px;
   }
 
-  .task-succes{
+  .task-succes {
     margin-right: 50px;
   }
 }
 
 @media (min-width: 1000px) and (max-width: 1149px) {
-  .box-sizingResponsiv{
+  .box-sizingResponsiv {
     display: none;
   }
 
@@ -643,7 +653,7 @@
     height: calc(100vh - 176px);
     padding-top: 52px;
   }
-  
+
   .recursor {
     display: none;
   }
@@ -653,54 +663,54 @@
     margin-left: 290px;
   }
 
-  .group66_addTask {    
+  .group66_addTask {
     display: flex;
     align-items: center;
-    justify-content: center;    
-    margin-left: 200px;  
-    flex-direction: column; 
+    justify-content: center;
+    margin-left: 200px;
+    flex-direction: column;
   }
 
-  .inputLeft_addTask{
+  .inputLeft_addTask {
     display: flex;
     height: 422px;
     width: 80%;
   }
 
-  .title_v1{
+  .title_v1 {
     width: 780px;
   }
 
-  .frame203{
+  .frame203 {
     width: 780px;
   }
 
-  .title_frame14{
-    width:600px;
-  }
-
-  .description_v1{
+  .title_frame14 {
     width: 600px;
   }
 
-  .frame207{
+  .description_v1 {
     width: 600px;
   }
 
-  .frame17{
+  .frame207 {
+    width: 600px;
+  }
+
+  .frame17 {
     width: 644px;
     position: inherit;
-  }  
+  }
 
-  .asignedTo_v1{
+  .asignedTo_v1 {
     width: 780px;
   }
-    
+
   .custom-checkbox label:before {
     margin-left: 320px;
   }
 
-  .contactAvatar{
+  .contactAvatar {
     margin-top: 2px;
   }
 
@@ -714,22 +724,22 @@
   }
 
   .underListContact {
-    width: 780px;   
-  }  
+    width: 780px;
+  }
 
-  .categoryFrame74{
+  .categoryFrame74 {
     width: 608px;
     z-index: auto;
     position: inherit;
   }
 
-  .categoryFrame_74{
+  .categoryFrame_74 {
     width: 608px;
     z-index: auto;
     position: inherit;
   }
 
-  .taskCategory{
+  .taskCategory {
     width: 748px;
   }
 
@@ -737,39 +747,41 @@
     display: none;
   }
 
-  .inputRight_addTask{
+  .inputRight_addTask {
     width: 80%;
     margin-top: 25px;
   }
 
-  .dueDate, .frame211{
+  .dueDate,
+  .frame211 {
     width: 640px;
   }
-  .inputDate{
+  .inputDate {
     width: 780px;
   }
 
-  .frame28{
+  .frame28 {
     width: 780px;
   }
 
-  .priority{
+  .priority {
     width: 100%;
   }
 
-  .list{
-    position:relative
+  .list {
+    position: relative;
   }
 
-  .options{
+  .options {
     width: 750px;
   }
 
-  .subtasks, .allSubtasks{
-    width:82%;
+  .subtasks,
+  .allSubtasks {
+    width: 82%;
   }
 
-  .subtaskItem{
+  .subtaskItem {
     width: 97% !important;
   }
 
@@ -781,22 +793,21 @@
   .comment {
     display: flex;
     width: 250px;
-  } 
-  .task_succes{
+  }
+  .task_succes {
     margin-bottom: 700px;
   }
 }
 
 @media (min-width: 1150px) and (max-width: 1399px) {
-
-  .box-sizingResponsiv{
+  .box-sizingResponsiv {
     display: none;
   }
 
-  .header { 
+  .header {
     position: relative;
   }
- 
+
   .recursor {
     display: none;
   }
@@ -805,31 +816,31 @@
     margin-left: 260px;
   }
 
-  .group66_addTask {    
+  .group66_addTask {
     width: 80%;
     align-items: center;
     justify-content: center;
     justify-content: space-evenly;
-    margin-left: 235px;  
+    margin-left: 235px;
   }
 
-  .frame17{
+  .frame17 {
     position: inherit;
   }
 
-  .categoryFrame74{
+  .categoryFrame74 {
     width: 405px;
     z-index: auto;
     position: inherit;
   }
 
-  .inputLeft_addTask{
+  .inputLeft_addTask {
     display: flex;
     align-items: center;
     height: 422px;
   }
 
-  .list{
+  .list {
     position: relative;
   }
 
@@ -840,7 +851,7 @@
 
   .comment {
     display: flex;
-    width: 250px;  
+    width: 250px;
     margin-left: 40px;
   }
 
@@ -858,8 +869,8 @@
   }
 }
 
-@media (min-width: 1400px){
-  .box-sizingResponsiv{
+@media (min-width: 1400px) {
+  .box-sizingResponsiv {
     display: none;
   }
 
@@ -867,5 +878,3 @@
     margin-top: 40px;
   }
 }
-
-  
