--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -461,7 +461,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .imgPrio-active{
 
-  fill: #fff;
+  fill: #fff !important;
 }
 
 .priorityMedium{
@@ -1292,3 +1292,6 @@ line-height: 120%; /* 24px */
     display: none;
 }
 
+.importWhitColor {
+    color: white !important;
+}
