--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -1,4 +1,4 @@
-@media (max-height: 900px) {
+@media only screen and (max-height: 900px), (max-width: 599px){
   .contentTask {
     overflow: scroll !important;
     height: 100vh !important;
@@ -7,8 +7,7 @@
     padding-bottom: 64px !important;
   }
 }
-
-@media (max-height: 900px) {
+@media only screen and (max-height: 900px), (max-width: 599px){
   .contentTask {
     overflow: scroll !important;
     height: 160vh !important;
