--- a/styles/add_tasks_mediaQuery.css
+++ b/styles/add_tasks_mediaQuery.css
@@ -1,20 +1,3 @@
-@media only screen and (max-height: 900px), (max-width: 599px){
-  .contentTask {
-    overflow: scroll !important;
-    height: 100vh !important;
-    margin-top: -80px !important;
-    padding-top: 100px !important;
-    padding-bottom: 64px !important;
-  }
-}
-@media only screen and (max-height: 700px), (max-width: 599px){
-  .contentTask {
-    overflow: scroll !important;
-    height: 160vh !important;
-    margin-top: -300px !important;
-  }
-}
-
 @media (max-width: 599px) {
   .box-sizing {
     display: none;
@@ -69,7 +52,6 @@
     align-items: center;
     flex-direction: column;
     overflow: scroll !important;
-    height: calc(100vh - 176px);
   }
 
   .textContainer_addTask {
@@ -88,11 +70,7 @@
   .vector4 {
     display: none;
   }
-
-  .content_addTask {
-    margin-top: 456px;
-  }
-
+ 
   .inputRight_addTask {
     margin-top: 50px;
     width: 300px;
@@ -224,7 +202,7 @@
   }
 
   .addTasksFooter {
-    margin-bottom: 25px;
+    margin-bottom: 90px;
     margin-left: 0px;
     width: 300px;
   }
@@ -263,6 +241,10 @@
   .custom-checkbox-board input[type="checkbox"]:checked + label:before {
     left: 180px;
   }
+
+  .contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 180px;
+}
 }
 
 @media (min-width: 600px) and (max-width: 799px) {
@@ -398,7 +380,7 @@
   }
 
   .searchContacts {
-    width: 300x;
+    width: 300px;
     font-size: 20px;
   }
   .circle {
@@ -492,12 +474,16 @@
   }
 
   .custom-checkbox-board label:before {
-    left: 410px;
+    left: 400px;
   }
 
   .custom-checkbox-board input[type="checkbox"]:checked + label:before {
-    left: 410px;
+    left: 400px;
   }
+
+  .contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 400px;
+}
 }
 
 @media (min-width: 800px) and (max-width: 999px) {
@@ -680,12 +666,16 @@
     margin-right: 50px;
   }
   .custom-checkbox-board label:before {
-    left: 595px;
+    left: 585px;
   }
 
   .custom-checkbox-board input[type="checkbox"]:checked + label:before {
-    left: 595px;
+    left: 585px;
   }
+
+  .contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 585px;
+}
 }
 
 @media (min-width: 1000px) and (max-width: 1249px) {
@@ -754,6 +744,10 @@
   .custom-checkbox label:before {
     margin-right: 320px;
   }
+
+  .contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before {
+    left: 520px;
+}
 
   .contactAvatar {
     margin-top: 2px;
