--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -7,30 +7,30 @@
     <!-- Menu -->
     <div class="sidebarLinkContainer">
       <div class="sidebarLinks">
-        <div id="sidebarCategorySummary" class="sidebarCategory" onclick="renderSummaryContent()">
+        <a id="sidebarCategorySummary" class="sidebarCategory" href="./summary.html">
           <div class="sidebarLink">
             <img class="sidebarIMG" src="./assets/img/Icons_summary.png" />
             <div class="sidebarMenuText">Summary</div>
           </div>
-        </div>
-        <div id="sidebarCategoryAddTask" class="sidebarCategory" onclick="render_addTask()">
+        </a>
+        <a id="sidebarCategoryAddTask" class="sidebarCategory" href="./add_task.html">
           <div class="sidebarLink">
             <img class="sidebarIMG" src="./assets/img/Icons_add_task.png" />
             <div class="sidebarMenuText">Add Task</div>
           </div>
-        </div>
-        <div id="sidebarCategoryBorard" class="sidebarCategory" onclick="renderBoardHTML()">
+        </a>
+        <a id="sidebarCategoryBorard" class="sidebarCategory" href="./board.html">
           <div class="sidebarLink">
             <img class="sidebarIMG" src="./assets/img/Icons_board.png" />
             <div class="sidebarMenuText">Board</div>
           </div>
-        </div>
-        <div id="sidebarCategoryContacts" class="sidebarCategory" onclick="render_contactsHtml()">
+        </a>
+        <a id="sidebarCategoryContacts" class="sidebarCategory" href="./contacts.html">
           <div class="sidebarLink">
             <img class="sidebarIMG" src="./assets/img/Icons_contacts.png" />
             <div class="sidebarMenuText">Contacts</div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <!-- Datenschutz -->
@@ -44,31 +44,29 @@
     </div>
   </div>
 </div>
-<div class="box-sizingResponsiv">        
-  <div class="sidebarCategoryResponsiv" onclick="renderSummaryContent()">
-          <div class="sidebarLinkResponsiv">
-              <img class="summaryBt" src="./assets/img/summaryBt.svg" alt="">
-              <img class="summaryBtHover" src="./assets/img/summaryBtHover.svg" alt="">
-          </div>
-  </div>
-  <div class="sidebarCategoryResponsiv" onclick="render_addTask()">
-          <div class="sidebarLinkResponsiv">
-              <img class ="addTaskBt" src="./assets/img/addTaskBt.svg" alt="">
-              <img class="addTaskBtHover" src="./assets/img/addTaskBtHover.svg" alt="">
-          </div>
-  </div>
-  <div class="sidebarCategoryResponsiv" onclick="renderBoardHTML()">
-          <div class="sidebarLinkResponsiv">
-              <img class="boardBt" src="./assets/img/boardBt.svg" alt="">
-              <img class="boardBtHover" src="./assets/img/boardBtHover.svg" alt="">
-          </div>
-  </div>
-  <div class="sidebarCategoryResponsiv" onclick="render_contactsHtml()">
-          <div class="sidebarLinkResponsiv">
-              <img class="contactsBt" src="./assets/img/contactsBt.svg">
-              <img class="contactsBtHover" src="./assets/img/contactsBtHover.svg">
-          </div>
-  </div>
-</div>            
+<div class="box-sizingResponsiv">
+  <a class="sidebarCategoryResponsiv" href="./summary.html">
+    <div class="sidebarLinkResponsiv">
+      <img class="summaryBt" src="./assets/img/summaryBt.svg" alt="" />
+      <img class="summaryBtHover" src="./assets/img/summaryBtHover.svg" alt="" />
+    </div>
+  </a>
+  <a class="sidebarCategoryResponsiv" href="./add_task.html">
+    <div class="sidebarLinkResponsiv">
+      <img class="addTaskBt" src="./assets/img/addTaskBt.svg" alt="" />
+      <img class="addTaskBtHover" src="./assets/img/addTaskBtHover.svg" alt="" />
+    </div>
+  </a>
+  <a class="sidebarCategoryResponsiv" href="./board.html">
+    <div class="sidebarLinkResponsiv">
+      <img class="boardBt" src="./assets/img/boardBt.svg" alt="" />
+      <img class="boardBtHover" src="./assets/img/boardBtHover.svg" alt="" />
+    </div>
+  </a>
+  <a class="sidebarCategoryResponsiv" href="./contacts.html">
+    <div class="sidebarLinkResponsiv">
+      <img class="contactsBt" src="./assets/img/contactsBt.svg" />
+      <img class="contactsBtHover" src="./assets/img/contactsBtHover.svg" />
+    </div>
+  </a>
 </div>
-</div>    
