--- a/styles/summary.css
+++ b/styles/summary.css
@@ -21,7 +21,6 @@ body {
 /* Linke Seite des Mains */
 .summaryLeft {
   margin-top: 48px;
-  max-width: 560px;
   height: calc(100vh - 96px);
 }
 
@@ -135,6 +134,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 18px;
+  color: #000;
 }
 
 #date {
@@ -292,7 +292,7 @@ body {
   transform: scale(1.05);
   background: #2a3647;
   transition: 225ms ease-in-out;
-  color: white;
+  color: white !important;
 }
 
 .toDoPanel:hover .editHover img {
@@ -316,12 +316,17 @@ body {
   color: white;
 }
 
+.toDoPanelBig:hover .deadline  {
+  color: white !important;
+}
+
 .toDoPanelBig:hover .taskNumber,
 .toDoPanelBig:hover .taskText {
   color: white;
 }
 .taskspanels:hover .tasksNumber,
-.taskspanels:hover .tasksText {
+.taskspanels:hover .tasksText,
+.taskspanels:hover .tasksTextFeedback{
   color: white;
 }
 .partingLine:hover {
@@ -415,6 +420,8 @@ body {
   .summaryMain {
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding-left: 80px;
     margin-left: 0;
   }
 
@@ -445,11 +452,19 @@ body {
 }
 
 @media (max-width: 680px) {
+  .summaryMain {
+    padding-left: 0px;
+  }
+
   .summaryHeader {
     flex-direction: column;
     margin-left: 56px;
     gap: 16px;
     margin-bottom: 56px;
+  }
+
+  .urgend-svg {
+    height: 40px;
   }
 
   .blueLine {
@@ -473,18 +488,18 @@ body {
   }
 
   .taskNumber {
-    font-size: 40px !important;
+    font-size: 24px !important;
   }
 
   .tasksNumber {
-    font-size: 32px !important;
+    font-size: 24px !important;
     line-height: 80%;
   }
 
   .taskText {
     font-size: 14px;
   }
-
+  
   .tasksText {
     margin-top: 60px;
     font-size: 14px;
@@ -611,7 +626,7 @@ body {
 }
   .urgend {
     gap: 8px;
-    width: 52px !important;
+    width: 57px !important;
     padding-right: 12px;
   }
 
