--- a/styles/board_responisv.css
+++ b/styles/board_responisv.css
@@ -2,7 +2,8 @@
   .largeCardA {
     width: 411px;
   }
-  .searchContactsBoard{
+
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -11,9 +12,11 @@
 
 @media (max-width: 513px) {
   .largeCardA {
-    width: 350px;
+    width: 400px;
+    padding: 32px 24px;
   }
-  .searchContactsBoard{
+
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -22,22 +25,32 @@
 
 @media (max-width: 444px) {
   .largeCardA {
-    width: 300px;
+    width: 336px
   }
-  .searchContactsBoard{
+
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
   }
+  .boardpriority {
+    display: flex;
+    gap: 12px;
+    margin-top: 8px;
+    flex-direction: column;
+    align-items: center;
+}
 }
 
 @media (max-width: 375px) {
   .titleBoard {
     font-size: 47px !important;
-    
-  }
 
-  .searchContactsBoard{
+  }
+  #addTaskLargeCard {
+    width: 334px !important;
+}
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -45,10 +58,10 @@
 
   .desingLagrCard {
     position: absolute;
-    top: 17px;
-    bottom: 100px;
-    width: 90%;
-  }
+    top: -2px;
+    bottom: 128px;
+    width: 93%;
+}
 
   .largeCardA {
     max-height: 94%;
@@ -61,7 +74,7 @@
     border-radius: 30px;
     background: #fff;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
-    width: 89%;
+    width: 86% !important;
   }
 
   .TechnicalTask {
@@ -184,11 +197,12 @@
     font-size: 47px !important;
   }
 
-  .searchContactsBoard{
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
   }
+
   .headlineBoard {
     display: flex;
     justify-content: space-between;
@@ -288,7 +302,7 @@
     font-size: 47px !important;
   }
 
-  .searchContactsBoard{
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -396,7 +410,7 @@
     width: 90% !important;
   }
 
-  .searchContactsBoard{
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -437,7 +451,8 @@
   .searchBar {
     width: 98%;
   }
-  .searchContactsBoard{
+
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -449,7 +464,7 @@
     width: 98%;
   }
 
-  .searchContactsBoard{
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -467,7 +482,7 @@
     margin-left: 20px !important;
   }
 
-  .searchContactsBoard{
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -514,7 +529,7 @@
     width: 87%;
   }
 
-  .searchContactsBoard{
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 20px;
@@ -577,12 +592,22 @@
 
 
 @media (max-width: 622px) {
-  #addTaskLargeCard {
-    width: 434px !important;
+  .BoardcontentTask {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
   }
 
   .inputLeft_addTaskBoard {
-    width: 420px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .title_v1Edit {
+    width: 100%;
   }
 
   .edittitle {
@@ -591,7 +616,15 @@
     height: 64px;
     border: 1px;
     gap: 4px;
-    width: 394px;
+    width: 100%;
+  }
+
+  .description_v1 {
+    gap: 8px;
+    display: flex;
+    flex-direction: column;
+    height: 168px;
+    width: 100%;
   }
 
   .titleEditCard {
@@ -601,8 +634,62 @@
     display: flex;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
-    width: 394px;
+    width: 100%;
     border-radius: 10px;
+  }
+
+  .asignedTo_v1 {
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .contactAvatarBoard {
+    width: 90%;
+  }
+
+  .dueDateBoard {
+    width: 100%;
+  }
+
+  .searchContactsBoard {
+    outline: none;
+    border-style: none;
+    font-size: 15px;
+  }
+
+  .frame28 {
+    width: 100%;
+  }
+
+  .priorityUrgent {
+    cursor: pointer;
+    display: flex;
+    padding: 14px 7px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    height: 12px;
+    width: 97px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  }
+
+  .priorityMedium {
+    padding: 14px 7px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    height: 12px;
+    width: 97px;
+  }
+
+  .priorityLow {
+    padding: 14px 7px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    height: 12px;
+    width: 97px;
   }
 
   .categoryEditCard {
@@ -621,8 +708,37 @@
     font-weight: 400;
     line-height: 24px;
     outline: none;
-    width: 360px;
+    width: 90%;
     margin-top: 8px;
+  }
+
+  .inputRight_addTaskEdit {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 24px;
+    margin-top: 80px;
+  }
+
+  .subtasksEdit {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+  }
+
+  .subtaskItem {
+    cursor: pointer;
+    display: flex;
+    width: 303px;
+    height: 32px;
+    padding: 4px 16px;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
   }
 
   .underListContactBoardEdit {
@@ -635,7 +751,7 @@
     background: var(--white, #fff);
     z-index: 1;
     max-height: 340px;
-    width: 375px;
+    width: 94%;
     overflow: auto;
   }
 
@@ -646,13 +762,20 @@
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
-    left: 254px;
+    left: 230px;
+  }
+
+  .saveContainer {
+    width: 81%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 44px;
   }
 }
 
 @media (max-width: 510px) {
   #addTaskLargeCard {
-    width: 350px !important;
+    width: 100%;
   }
 
   .inputLeft_addTaskBoard {
@@ -665,7 +788,7 @@
     height: 64px;
     border: 1px;
     gap: 4px;
-    width: 328px;
+    width: 94%;
   }
 
   .titleEditCard {
@@ -709,7 +832,7 @@
     background: var(--white, #fff);
     z-index: 1;
     max-height: 340px;
-    width: 375px;
+    width: 308px;
     overflow: auto;
   }
 
@@ -720,7 +843,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
-    left: 254px;
+    left: 200px;
   }
 
   .inputRight_addTaskEdit {
@@ -737,8 +860,6 @@
     display: flex;
     gap: 12px;
     margin-top: 8px;
-    flex-direction: column;
-    align-items: center;
   }
 
   .allSubtasks {
@@ -765,13 +886,29 @@
   }
 }
 
+@media (max-width: 397px) { 
+  .largeCardA {
+    width: 300px;
+    max-height: 94%;
+    border: solid;
+    display: flex;
+    padding: 14px 24px;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 24px;
+    border-radius: 30px;
+    background: #fff;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+    width: 89%;
+}
+}
 @media (max-width: 444px) {
   #addTaskLargeCard {
-    width: 300px !important;
+    width: 330px !important;
   }
 
   .inputLeft_addTaskBoard {
-    width: 300px;
+    width: 289px;
   }
 
   .edittitle {
@@ -783,7 +920,7 @@
     width: 278px;
   }
 
-  .searchContactsBoard{
+  .searchContactsBoard {
     outline: none;
     border-style: none;
     font-size: 16px;
@@ -830,7 +967,7 @@
     background: var(--white, #fff);
     z-index: 1;
     max-height: 340px;
-    width: 314px;
+    width: 262px;
     overflow: auto;
   }
 
@@ -875,6 +1012,10 @@
     gap: 24px;
     margin-top: 80px;
   }
+
+  .description {
+    width: 200px;
+  }
 }
 
 
@@ -900,6 +1041,7 @@
     flex-wrap: wrap;
   }
 }
+
 @media (max-width: 1382px) {
 
   .taskAria {
@@ -917,19 +1059,20 @@
   }
 }
 
-@media (max-width: 1156px){
+@media (max-width: 1156px) {
 
-.taskAria {
+  .taskAria {
     width: 77%;
     flex-wrap: wrap;
     padding: 0;
+  }
 }
-}
-@media (max-width: 366px){
 
-.taskAria {
+@media (max-width: 366px) {
+
+  .taskAria {
     width: 93% !important;
     flex-wrap: wrap;
     padding: 0;
-}
+  }
 }
